Merged daniel's work into mine to continue working